corrected workspace arm-wip in pipeline

--- a/cnf/arm_deploy_pipeline.yaml
+++ b/cnf/arm_deploy_pipeline.yaml
@@ -40,7 +40,7 @@ spec:
       name: arm-db-deploy
     workspaces:
     - name: arm-wip
-      workspace: shared-workspace
+      workspace: arm-wip
     # runAfter:
     # - z-previous-task
     params:    
