corrected bash path to /usr/local/bin/bash on bash:latest image

--- a/cnf/arm_deploy_task.yaml
+++ b/cnf/arm_deploy_task.yaml
@@ -38,7 +38,7 @@ spec:
     - name: check-params
       image: bash:latest
       workingDir: /workspace/arm-wip
-      command: ["/bin/bash", "-c"]
+      command: ["/usr/local/bin/bash", "-c"] # which bash ==> /usr/local/bin/bash
       args:
         - |-
           iac=$(inputs.params.ARM_TEMPLATE)
