added echo trace

--- a/cnf/arm_deploy_task.yaml
+++ b/cnf/arm_deploy_task.yaml
@@ -139,7 +139,8 @@ spec:
       script: | 
         #!/usr/local/bin/bash
         echo "pre-flight init step ...""
-        # echo "I am supposed to sleep for 10 seconds!"      
+        # echo "I am supposed to sleep for 10 seconds!" 
+        echo -----------------------------------     
         sleep 10
       # timeout: 5s
 ---
@@ -157,5 +158,6 @@ spec:
       script: | 
         #!/usr/local/bin/bash
         echo "Post-provisionning check completed.""
+        echo -----------------------------------
         sleep 10
       # timeout: 5s
