corrected runAfter tab in yaml

--- a/cnf/arm_deploy_pipeline.yaml
+++ b/cnf/arm_deploy_pipeline.yaml
@@ -56,7 +56,8 @@ spec:
     workspaces:
     - name: arm-wip
       workspace: arm-wip
-    runAfter: init
+    runAfter: 
+      - init
     params:    
     - name: ARM_TEMPLATE
       value: $(params.ARM_TEMPLATE)
@@ -84,4 +85,5 @@ spec:
     workspaces:
     - name: arm-wip
       workspace: arm-wip
-    runAfter: deploy-azure-paas
+    runAfter: 
+      - deploy-azure-paas
