corrected ADM Login value as Maximum length is 16.

--- a/cnf/arm_deploy_pipeline.yaml
+++ b/cnf/arm_deploy_pipeline.yaml
@@ -27,7 +27,7 @@ spec:
       type: string
       default: "my-oss-db"
     - name: ADM_LOGIN
-      description: The Admin user name
+      description: The Admin user name, Maximum length is 16.
       type: string
       default: "db-admin"
     - name: ADM_PWD
