--- a/cnf/arm_deploy_task.yaml
+++ b/cnf/arm_deploy_task.yaml
@@ -27,7 +27,7 @@ spec:
       type: string
       default: "my-oss-db"
     - name: ADM_LOGIN
-      description: The Admin user name
+      description: The Admin user name, Maximum length is 16.
       type: string
       default: "db-admin"
     - name: ADM_PWD
@@ -117,11 +117,22 @@ spec:
 
           echo About to deploy ARM Template $iac from https://github.com/$arm_template_root
 
-          az deployment group create \
+          arm_result=$(az deployment group create \
           --resource-group $arm_rg_name \
           --name $arm_deployment_name \
           --template-uri https://raw.githubusercontent.com/$arm_template_root/master/$iac/azuredeploy.json \
-          --parameters $iac/azuredeploy.parameters.json
+          --parameters $iac/azuredeploy.parameters.json)
+
+          echo $arm_result
+          
+          if [[ -n "$(echo $arm_result | grep -e "error:" )" ]]
+            then
+               echo ERROR in ARM deployment, EXIT
+               exit 1
+            else
+              echo No error in ARM deployment
+              return 0
+          fi
 
           echo -----------------------------------
 ---
