updated witrh persistentVolumeReclaimPolicy: Delete

--- a/cnf/root-storage-test-pod.yaml
+++ b/cnf/root-storage-test-pod.yaml
@@ -10,6 +10,7 @@ spec:
     storage: 10Gi
   accessModes:
     - ReadWriteOnce
+  persistentVolumeReclaimPolicy: Delete
   hostPath:
     path: "/"
 ---
