--- a/cnf/secrets-store-csi-provider-class.yaml
+++ b/cnf/secrets-store-csi-provider-class.yaml
@@ -1,7 +1,7 @@
 apiVersion: secrets-store.csi.x-k8s.io/v1alpha1
 kind: SecretProviderClass
 metadata:
-  name: azure-$KV_NAME
+  name: $KV_NAME
 spec:
   provider: azure
   parameters:
